test/integration/bad/array_expr_bad1.stan
transformed data {
  real td_arr32[3,2] = { 1, 3 };
}
model {
}
